# SpinnerEffect

./: README.md  main.py  pyproject.toml
